@@ -14,6 +14,7 @@ DDD 2.3 [in development]
     - DBX settings now also work with SGI DBX.
     - The maximum number of glyphs is now configurable at startup time.
       See the `maxGlyphs' resource for details.
+    - Tear-off menus are supported (and enabled by default).
 
     Bug fixes:
     - Using Sun DBX 3.x, data displays are no longer cluttered by DBX
